2015-07-19  Carl Hetherington  <cth@carlh.net>

	* Fix some missing set-to-defaults (#640).

	* Version 2.1.25 released.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.24 released.

2015-07-17  c.hetherington  <cth@carlh.net>

	* Support FTP upload to TMS (#639).

	* Fix bad behaviour of timeline snap.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.23 released.

2015-07-17  Carl Hetherington  <cth@carlh.net>

	* Improve still-image filename sorting.

2015-07-16  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 2.1.22 released.

2015-07-16  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-07-14  c.hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Fix trim point movement when changing DCP frame rate (#637).

2015-07-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.21 released.

2015-07-14  Carl Hetherington  <cth@carlh.net>

	* Fix occasional strange failure to allow content
	selection (#636).

	* Fix failure to encode 3D from separate content
	in some cases (from 1.x) (#634).

	* Fix non-working 3D DCP creation when using separate
	pieces of content for each eye (#635).

2015-07-12  Carl Hetherington  <cth@carlh.net>

	* Enforce restrictions on SSL certificate properties.

2015-07-09  Carl Hetherington  <cth@carlh.net>

	* Improve 'best' frame rate guess in some cases (#633).

	* Version 2.1.20 released.

2015-07-09  c.hetherington  <cth@carlh.net>

	* Fix error when using DCP content with no audio channels.

	* Stop Ctrl+A working when the content tab is not visible (#577).

2015-07-08  c.hetherington  <cth@carlh.net>

	* Remove the (I suspect) rarely used and very limited
	'properties' dialogue.

	* Stop V2 recognising V1 servers and vice versa (#510).

2015-07-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.19 released.

2015-07-06  c.hetherington  <cth@carlh.net>
